# TestOptimizersOnSpaceTrajectoryProblems

./: README.md  cassini_plot.ipynb  jupiter1_plot.ipynb  jupiter2_plot.ipynb
GTOPtoolbox/: CMakeLists.txt  cassini1Main.cpp  jupiter1Main.cpp  jupiter2Main.cpp  mga.cpp  trajobjfuns.cpp  trajobjfuns.h
optimizers/: aux_functions.py  generate_data.py  get_best.py  get_best_and_evals.py  get_pareto_front.py  globals.py  objective_functions.py  pygmo_problems.py  pymoo_problems.py  see_python_easy_cost.py  show_data.py
optimizers/data/: cassini_1_abc_single_objective.txt  cassini_1_de_single_objective.txt  cassini_1_ga_single_objective.txt  cassini_1_mhaco_multi_objective.txt  cassini_1_moead_multi_objective.txt  cassini_1_mopso_multi_objective.txt  cassini_1_nsga-ii_multi_objective.txt  cassini_1_nsga-ii_single_objective.txt  cassini_1_pareto_points.txt  cassini_1_pso_single_objective.txt  cassini_1_sa_single_objective.txt  jupiter_easy_abc_single_objective.txt  jupiter_easy_de_single_objective.txt  jupiter_easy_ga_single_objective.txt  jupiter_easy_mhaco_multi_objective.txt  jupiter_easy_moead_multi_objective.txt  jupiter_easy_mopso_multi_objective.txt  jupiter_easy_nsga-ii_multi_objective.txt  jupiter_easy_nsga-ii_single_objective.txt  jupiter_easy_pareto_points.txt  jupiter_easy_pso_single_objective.txt  jupiter_easy_sa_single_objective.txt  jupiter_hard_abc_single_objective.txt  jupiter_hard_de_single_objective.txt  jupiter_hard_ga_single_objective.txt  jupiter_hard_mhaco_multi_objective.txt  jupiter_hard_moead_multi_objective.txt  jupiter_hard_pareto_points.txt  (+5 more)
